FAI-3140 Change for the AutomatedQAOutcomeIndicators
