# src/Recruit.Api/swagger.json
@@ -8481,7 +8481,10 @@
             "nullable": true
           },
           "automatedQaOutcomeIndicators": {
-            "type": "string",
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/RuleOutcome"
+            },
             "nullable": true
           },
           "dismissedAutomatedQaOutcomeIndicators": {
@@ -8885,6 +8888,50 @@
           "Closed"
         ],
         "type": "string"
+      },
+      "RuleId": {
+        "enum": [
+          "ProfanityChecks",
+          "BannedPhraseChecks",
+          "VacancyAnonymous"
+        ],
+        "type": "string"
+      },
+      "RuleOutcome": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "string",
+            "format": "uuid"
+          },
+          "details": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/RuleOutcome"
+            },
+            "nullable": true
+          },
+          "ruleId": {
+            "$ref": "#/components/schemas/RuleId"
+          },
+          "score": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "narrative": {
+            "type": "string",
+            "nullable": true
+          },
+          "data": {
+            "type": "string",
+            "nullable": true
+          },
+          "target": {
+            "type": "string",
+            "nullable": true
+          }
+        },
+        "additionalProperties": false
       },
       "SortOrder": {
         "enum": [
@@ -9529,7 +9576,10 @@
             "nullable": true
           },
           "automatedQaOutcomeIndicators": {
-            "type": "string",
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/RuleOutcome"
+            },
             "nullable": true
           },
           "dismissedAutomatedQaOutcomeIndicators": {
